@@ -8,6 +8,7 @@ Stable versions
 	- fix IT tone portamento with sample changes
 	- fix IT initial global volume setting
 	- fix IT keyoff with instrument in old effects mode
+	- fix IT filter maximum values with resonance
 	- fix IT random volume variation
 	- fix pattern initialization sanity check
 	- fix ++ pattern handling in IT loader (reported by honguito98)
